[ fix ] rapi docs display issue on mobile with iframe and add check for user auth in docs

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
     height: calc(var(--vh, 1vh) * 100);
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 #react-root {
